<resources>
    <string name="app_name">OpenMyGarage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_log">Logs</string>
    <string name="menu_plate">Plates</string>
    <string name="title_extended_log">Log</string>
    <string name="extended_image_description">Image of entry log</string>
    <string name="piw_edit_button_text">Edit</string>
    <string name="piw_delete_button_text">Delete</string>
    <string name="epf_name_et_hint">Nickname</string>
    <string name="epf_plate_et_hint">Plate (XYZ-123)</string>
    <string name="epf_done_button_text">Done</string>
    <string name="epf_nation_et_hint">Nationality (HU)</string>
    <string name="epf_manufacturer_et_hint">Car manufacturer</string>
    <string name="epf_autoOpen_switch_text">AutoOpen</string>

    <string name="omg_notification_channel_id" translatable="false">omg_channel</string>
    <string name="omg_notification_channel_name" translatable="true">Open My Garage</string>

    <string name="login_logo_cd">Logo</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="extended_tw_plate_label">Plate:</string>
    <string name="extended_tw_entry_label">Entry time:</string>
    <string name="home_fab_description">Toggle gate</string>
</resources>