<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="entryLog"
            type="com.norbertneudert.openmygarage.data.entities.EntryLog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/extended_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/extended_image_description"
            android:background="@drawable/item_view_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extended_tw_plate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="100dp"
            android:autoSizeMinTextSize="36sp"
            android:text="@string/extended_tw_plate_label"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/extended_tw_entry_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extended_image" />

        <TextView
            android:id="@+id/extended_tw_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_view_style"
            android:padding="10dp"
            android:text="@{entryLog.plate}"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/extended_tw_plate_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/extended_tw_plate_label"
            app:layout_constraintTop_toTopOf="@+id/extended_tw_plate_label" />

        <TextView
            android:id="@+id/extended_tw_entry_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autoSizeMinTextSize="36sp"
            android:text="@string/extended_tw_entry_label"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extended_tw_plate_label" />

        <TextView
            android:id="@+id/extended_tw_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_view_style"
            android:padding="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/extended_tw_entry_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/extended_tw_entry_label"
            app:layout_constraintTop_toTopOf="@+id/extended_tw_entry_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>